--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste de courses collaborative</title>
     <style>
         body {
@@ -131,7 +132,7 @@
 
 <body>
 
-    <h1>🛒 Qui prend quoi</h1>
+    <h1>🛒 Liste des courses</h1>
 
     <div class="container">
 
@@ -155,7 +156,7 @@
 
         <!-- Listes de courses -->
         <div class="box">
-            <h2>Listes de courses</h2>
+            <h2>Qui prend quoi</h2>
             <div id="shoppingLists"></div>
         </div>
 
