--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
         <!-- Listes de courses -->
         <div class="box">
             <h2>Qui prend quoi</h2>
+            <form id="searchInputForm">
+                <input type="text" placeholder="Rechercher..."/>
+                <button>🔍</button>
+            </form>
             <div id="shoppingLists"></div>
         </div>
 
@@ -201,6 +205,7 @@
         const participantsPopup = document.querySelector("#participants-popup");
         let selectedFoodIndex = -1;
         let selectedParticipantIndex = -1;
+        let foods = [];
         // const addParticipantBtn = document.getElementById("addParticipantBtn");
         // addParticipantBtn.addEventListener("click", () => {
         //     addParticipant();
@@ -211,12 +216,34 @@
             addFood();
         });
 
+        const searchInputForm = document.getElementById("searchInputForm");
+        const searchInput = searchInputForm.querySelector("input");
+
+        searchInputForm.addEventListener("submit", e => {
+            e.preventDefault();
+            const formatedSearchValue = searchInput.value.trim().toLowerCase();
+            for(let i = 0, l = foods.length; i < l; i++) {
+                const food = foods[i];
+                if(food.formatedName.match(formatedSearchValue)) {
+                    window.scrollTo({
+                        top: document.querySelector(`li[data-i="${food.i}"]`).dataset.y,
+                        left: 0,
+                        behavior: "smooth",
+                    })
+                    break;
+                }
+
+            }
+        })
+
         async function initDataFromFirebase() {
-            const foods = await getItemsFromDb("foods");
-            const sortedFoods = foods.sort((a,b) => a.name < b.name ? -1 : a.name > b.name ? 1 : 0);
+            foods = await getItemsFromDb("foods");
+            foods = foods
+            .sort((a,b) => a.name < b.name ? -1 : a.name > b.name ? 1 : 0)
+            .map((f, i) => ({...f, formatedName: f.name.toLowerCase(), i}));
             participants = await getItemsFromDb("participants");
-            participants = participants.map(p => ({...p, foods: sortedFoods.filter(f => f.participantId === p.id)}));
-            foodsWithoutParticipant = sortedFoods.filter(f => !f.participantId);
+            participants = participants.map(p => ({...p, foods: foods.filter(f => f.participantId === p.id)}));
+            foodsWithoutParticipant = foods.filter(f => !f.participantId);
             renderParticipantsPopup();
             render();
         }
@@ -377,8 +404,9 @@
             participants.forEach((p, pi) => {
                 const div = document.createElement("div");
                 div.innerHTML = `<strong>${p.name}</strong>`;
+                shoppingLists.appendChild(div);
                 const ul = document.createElement("ul");
-
+                div.appendChild(ul);
                 p.foods.forEach((food, fi) => {
                     const li = document.createElement("li");
                     li.innerHTML = `
@@ -392,12 +420,11 @@
                         showParticipantsPopup(fi, pi);
                     })
                     ul.appendChild(li);
+                    li.dataset.y = li.getBoundingClientRect().y;
+                    li.dataset.i = food.i;
                 });
-
-                div.appendChild(ul);
-                shoppingLists.appendChild(div);
             });
-
+            
 
         }
     
