debug delete food with no participant

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 selectedParticipantIndex = -1;
             } else {
                 foodId = foodsWithoutParticipant[selectedFoodIndex].id;
-                foodsWithoutParticipant.splice(foodIndex, 1);
+                foodsWithoutParticipant.splice(selectedFoodIndex, 1);
             }
             
             participantsPopup.className = "hide";
