--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
         }
 
         async function attributeSelectedFoodToParticipant(participantId) {
+            console.log(selectedParticipantIndex, selectedParticipantIndex > -1);
             const food = selectedParticipantIndex > -1 ? participants[selectedParticipantIndex].foods[selectedFoodIndex] : foodsWithoutParticipant[selectedFoodIndex];
             const ref = db.collection("foods").doc(food.id);
 
@@ -459,7 +460,7 @@
                     </button>
                     `;
                     li.querySelector("button").addEventListener("click", () => {
-                        showParticipantsPopup(fi, null, food.taken);
+                        showParticipantsPopup(fi, -1, food.taken);
                     })
                     foodsList.appendChild(li);
             });
