removed switch taken state button in popup

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 
         <div id="participants-popup" class="out-of-screen-bottom">
             <h2>Qui prend ?</h2>
-            <div id="taken-btn-ctnr">
+            <!-- <div id="taken-btn-ctnr">
                 <button>A prendre</button>
-            </div>
+            </div> -->
             <ul>
                 <!-- <li><button style="color:red">Supprimer</button></li> -->
             </ul>
